--- a/movie-website/index.html
+++ b/movie-website/index.html
@@ -161,7 +161,7 @@
         <section class="split contact">
             <section>
                 <h3>Contact</h3>
-                <p><a href="mailto:info@myblog.com">info@myblog.com</a></p>
+                <p><a href="mailto:info@myblog.com">movie-blog@gmail.com</a></p>
             </section>
         </section>
     </footer>
