--- a/movie-website/index.html
+++ b/movie-website/index.html
@@ -4,7 +4,7 @@
     <title>My Movie Blog</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="/movie-website/stylesheet" href="/movie-website/assets/css/main.css" />
+    <link rel="stylesheet" href="/movie-website/assets/css/main.css" />
     <noscript><link rel="stylesheet" href="/movie-website/assets/css/noscript.css" /></noscript>
 </head>
 <body class="is-preload">
