--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="wrapper" class="fade-in">
         <!-- Header -->
         <header id="header">
-            <h1 class="logo">THE MOVIE PLUG</h1>
+            <h1 class="logo">MOVIE PROFILE</h1>
             <nav id="nav">
                 <ul class="links">
                     <li class="active"><a href="index.html">Home</a></li>
