--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <nav id="nav">
                 <ul class="links">
                     <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <!-- <li><a href="about.html">About Us</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
