--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <nav id="nav">
                 <ul class="links">
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="#wrapper">About Us</a></li>
                     <!-- <li><a href="about.html">About Us</a></li> -->
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/">Contact</a></li>
                 </ul>
 
                 <ul class="icons">
